fix: index spacing tweaks

--- a/site/style.css
+++ b/site/style.css
@@ -3,7 +3,7 @@
 .about {
   flex: 1;
   overflow-y: auto;
-  padding: 3rem 1.5rem;
+  padding: 2rem 1.5rem;
   max-width: 48rem;
   margin: 0 auto;
   width: 100%;
@@ -45,7 +45,7 @@
 .hero {
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 1rem;
   align-items: center;
   text-align: center;
 }
@@ -77,7 +77,7 @@
 }
 
 .hero-text {
-  font-size: 1.25rem;
+  font-size: 1rem;
   line-height: 1.5;
   max-inline-size: 55ch;
 
@@ -230,7 +230,7 @@
 @media (max-width: 43.75rem) {
   /* About */
   .about {
-    padding: 2rem 1rem;
+    padding: 1rem 1.5rem 2rem;
   }
   .links-section {
     flex-direction: column;
